# UIMADockerWrapper

./: .gitignore  README.md  package.sh  pom.xml
container_explorer/: README.md  pubspec.yaml
container_explorer/android/app/: build.gradle
container_explorer/ios/Runner/: Info.plist
container_explorer/ios/Runner.xcodeproj/: project.pbxproj
container_explorer/lib/: html_version.dart  main.dart  mobile_version.dart
container_explorer/lib/bloc/: url_event.dart  url_event.freezed.dart  url_selector.dart  url_state.dart  url_state.freezed.dart
container_explorer/lib/entities/: analysis_engine.dart  analysis_engine.freezed.dart  analysis_engine.g.dart  annotator.dart  annotator.freezed.dart  annotator.g.dart  parameter.dart  parameter.freezed.dart  parameter.g.dart  sofa_mappings.dart  sofa_mappings.freezed.dart  sofa_mappings.g.dart  type.dart  type.freezed.dart  type.g.dart  typesystem.dart  typesystem.freezed.dart  typesystem.g.dart  unlisted_parameter.dart  unlisted_parameter.freezed.dart  unlisted_parameter.g.dart
container_explorer/lib/presentation/: analysis_engine_screen.dart  connect_screen.dart  dockerfile_screen.dart  endpoint_widget.dart  nav_drawer.dart  (+3 more)
container_explorer/test/: widget_test.dart
container_explorer/web/: index.html
corpora/: evaluation.ipynb
corpora/english_wikipedia/: Cargo.toml  README.md
corpora/english_wikipedia/src/: main.rs
corpora/german_political_speeches/: README.md  extract.py
online_documentation/UIMADockerWrapper/: book.toml
web/: flutter_service_worker.js  index.html  main.dart.js
web/assets/: NOTICES
(+100 files in other folders)
